# adamant

./: .bochsrc  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  run.sh  run_bochs.sh  run_qemu.sh
scripts/: build_limine.sh  run_bochs.sh  run_qemu.sh  run_update.sh  run_update_bochs.sh
src/: header.rs  log.rs  main.rs  panic.rs  serial.rs  stivale2.rs
src/allocator/: mem_map.rs  mod.rs  pmm.rs
src/allocator/bootloaders/: stivale2.rs
src/arch/x86/: gdt.rs  idt.asm  idt.rs  interrupts.rs  mod.rs
src/arch/x86_64/: gdt.rs  interrupts.rs  mod.rs
src/memory/: mem_map.rs  mod.rs
src/memory/bootloaders/: stivale2.rs
src/memory/pmm/: bitmap.rs  mod.rs
src/serial/: mod.rs  serial.rs
